syntax = "proto3";

package imfun.comet;

option go_package = "github.com/zhixunjie/im-fun/api/comet;comet";

import "protocol/protocol.proto";

// users
message PushUserKeysReq {
  repeated string userKeys = 1;
  imfun.protocol.Proto proto = 2;
  int32 subId = 3;
}

message PushUserKeysReply {}

// all users
message PushUserAllReq{
  imfun.protocol.Proto proto = 1;
  int32 subId = 2;
  int32 speed = 3;
}

message PushUserAllReply{}

// room users
message PushUserRoomReq {
  string roomId = 1;
  imfun.protocol.Proto proto = 2;
  int32 subId = 3;
}

message PushUserRoomReply{}

// room's
message GetAllRoomIdReq{}

message GetAllRoomIdReply {
  map<string, bool> rooms = 1;
}

service Comet {
  // push by user keys
  rpc PushUserKeys(PushUserKeysReq) returns (PushUserKeysReply);
  // push by room's user
  rpc PushUserRoom(PushUserRoomReq) returns (PushUserRoomReply);
  // push by every user
  rpc PushUserAll(PushUserAllReq) returns (PushUserAllReply);
  // get all rooms
  rpc GetAllRoomId(GetAllRoomIdReq) returns (GetAllRoomIdReply);
}
